Refactor FieldModifier class to enhance attribute handling and add relation modifiers